gsKit ChangeLog:

-> 06/29/04 - Chris Gilbert (Neovanglist) 
   * dmaKit officially finished.
   * gsKit has working ZTest.
   * gsKit has working Alpha.
   * All primitives implimented and working.
   * gsKit 0.1 release.

-> 06/15/04 - Chris Gilbert (Neovanglist) 
   * Changed directory layout. (See README)
   * Added dmaKit.

-> 06/15/04 - Chris Gilbert (Neovanglist) 
   * Project framework and build system completed.
   * Created CVS module and commited to PS2Dev CVS.
   * README, STATUS, AUTHORS, ID, and LICENSE files added.
